src/styles/Player.module.css
.container {
  display: flex;
  flex-direction: column;
  color: #e5e5e5;
  width: 100%;
  min-height: 4.5rem;
  background: rgb(40 40 40);
  background: linear-gradient(
    90deg,
    rgba(40 40 40 / 100%) 32%,
    rgba(99 99 99 / 100%) 100%
  );

  /* overflow: hidden; */
}

.controls-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 2.4rem;
  padding: 0.5rem;
  flex-grow: 1;
  position: relative;
}

.controls-left,
.controls-right,
.controls-center {
  display: flex;
  align-items: center;
}

.controls-center {
  gap: 1rem;
  flex-grow: 1;
}

.controls-right {
  position: absolute;
  top: 0;
  right: 0;
  background-color: transparent;
}

.controls-right svg {
  display: block;
}

@media only screen and (min-width: 768px) {
  .controls-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
  }

  .controls-right,
  .volume-container {
    position: static;
  }

  .volume-container button {
    background: transparent;
    color: #efefef;
  }
}

.track-info {
  flex-grow: 1;
}

.track-info * {
  display: inline;
}

.track-info *,
.track-time * {
  margin: 0;
}

.range-slider {
  --value: 0;
  --min: 0;
  --max: 100;
  --range: calc(var(--max) - var(--min));
  --ratio: calc((var(--value) - var(--min)) / var(--range));
  --sx: calc(0.5 * 10px + var(--ratio) * (100% - 10px));
  --slider-height: 12px;
  --thumb-width: 6px;
  --thumb-height: var(--slider-height);
  --color-background: #efefef;
  --color-active: #f00;
  --color-gradient: linear-gradient(
    45deg,
    rgba(59 173 227 / 100%) 0%,
    rgba(87 111 230 / 100%) 25%,
    rgba(152 68 183 / 100%) 51%,
    rgba(255 53 127 / 100%) 100%
  );
  --split-gradient: var(--color-gradient) 0 / var(--sx) 100% no-repeat,
    var(--color-background);

  width: 100%;
  flex-grow: 1;
  appearance: none;
  cursor: pointer;
  height: var(--slider-height);
  margin: 0;
  padding: 0;
  transition: transform ease 200ms;
}

.range-slider::-webkit-slider-thumb {
  appearance: none;
  width: var(--thumb-width);
  height: var(--thumb-height);
  background: transparent;
  border: none;
  margin-top: calc(var(--slider-height) * 0.5 - var(--thumb-height) * 0.5);
}

.range-slider::-moz-range-thumb {
  appearance: none;
  width: var(--thumb-width);
  height: var(--thumb-height);
  background: transparent;
  border: none;
  margin-top: calc(var(--slider-height) * 0.5 - var(--thumb-height) * 0.5);
}

.range-slider::-webkit-slider-runnable-track {
  height: var(--slider-height);
  background: var(--split-gradient);
  border: none;
  box-shadow: none;
  margin: 0;
}

.range-slider::-moz-range-track {
  height: var(--slider-height);
  background: var(--color-background);
  border: none;
  box-shadow: none;
  margin: 0;
}

.range-slider::-moz-range-progress {
  background: var(--color-gradient);
  height: var(--slider-height);
}

/* Accessible outlines on keyboard focus */

.range-slider:focus {
  outline: none;
}

.range-slider:focus-visible::-webkit-slider-thumb {
  background-color: #efefef;
  border: 2px solid black;
  outline: 3px solid #efefef;
  outline-offset: 0.125rem;
}

.range-slider:focus-visible::-moz-range-thumb {
  background-color: #efefef;
  border: 2px solid black;
  outline: 3px solid #efefef;
  outline-offset: 0.125rem;
}

.range-slider:hover {
  transform-origin: top center;
  transform: scale3d(1, 1.15, 1);
}

.range-slider:hover:active {
  cursor: grabbing;
}

/* Volume styles */

.volume-container {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  background: transparent;
  position: relative;
}

@media only screen and (max-width: 767px) {
  /* .volume-container {
    position: absolute;
    top: 0;
    left: 0;
  } */

  .volume-container button {
    background: transparent;
    color: #efefef;
    margin: 0;
    padding: 0;
  }
}

.volume-container input {
  margin-inline-start: 0.6rem;
  min-width: 4rem;
  text-align: start;
}

.volume-container svg {
  height: 2.6rem;
  width: auto;
}

/* Volume range input styles */

.volume-slider {
  --value: 50;
  --min: 0;
  --max: 100;
  --range: calc(var(--max) - var(--min));
  --ratio: calc((var(--value) - var(--min)) / var(--range));
  --sx: calc(var(--ratio) * (100%));
  --slider-height: 6px;
  --thumb-height: 24px;
  --color-background: #efefef;
  --color-progress: #555;
  --slider-border-radius: 24px;
  --split-gradient: linear-gradient(
    to right,
    var(--color-background) var(--sx),
    var(--color-progress) 0%
  );

  appearance: none;
  border-radius: var(--slider-border-radius);
  border: none;
  cursor: pointer;
  height: var(--slider-height);
  margin: 0;
  outline: none;
  padding: 0;
  width: 6.25rem;
}

@media only screen and (max-width: 768px) {
  .mobile-volume {
    position: relative;
  }

  .volume-slider {
    transform: rotate(270deg);
    transform-origin: bottom left;
    position: absolute;
    top: -10%;
    left: 40%;
  }
}

.volume-slider::-webkit-slider-runnable-track {
  appearance: none;
  background: var(--split-gradient), 0 / var(--sx) 100% no-repeat,
    var(--color-background);
  border-radius: var(--slider-border-radius);
  border: 1px solid var(--color-progress);
  height: var(--slider-height);
  outline: none;
}

.volume-slider::-moz-range-track {
  appearance: none;
  background: var(--color-progress);
  border-radius: var(--slider-border-radius);
  border: none;
  height: var(--slider-height);
  margin: 0;
  outline: none;
}

.volume-slider::-moz-range-progress {
  background: var(--color-background);
  height: var(--slider-height);
  border-radius: var(--slider-border-radius);
  margin: 0;
}

.volume-slider::-webkit-slider-thumb {
  appearance: none;
  height: var(--thumb-height);
  width: var(--thumb-height);
  background: var(--color-background);
  border-radius: 50%;
  margin-top: calc(
    (var(--slider-height) * 0.5 - var(--thumb-height) * 0.5) - 1px
  );
  border: 2px solid var(--color-progress);
  box-shadow: 0 0 1px var(--color-progress) inset,
    0 0 1px var(--color-background);
}

.volume-slider::-moz-range-thumb {
  appearance: none;
  background: var(--color-background);
  border-radius: 50%;
  border: 2px solid var(--color-progress);
  box-shadow: 0 0 1px var(--color-progress) inset,
    0 0 1px var(--color-background);
  height: var(--thumb-height);
  width: var(--thumb-height);
  margin-top: calc(var(--slider-height) * 0.5 - var(--thumb-height) * 0.5);
}

/* Accessible outlines on keyboard focus */

.volume-slider:focus {
  outline: none;
}

.volume-slider:focus-visible::-webkit-slider-thumb {
  border: 2px solid black;
  outline: 3px solid white;
  outline-offset: 0.125rem;
}

.volume-slider:focus-visible::-moz-range-thumb {
  border: 2px solid black;
  outline: 3px solid white;
  outline-offset: 0.125rem;
}

.volume-slider:hover:active {
  cursor: grabbing;
}

.button {
  height: 100%;
  padding: 0;
  color: #e5e5e5;
  background-color: transparent;
}

.button svg {
  height: 2.6rem;
  width: auto;
}

